--- a/odoo-custom-addons/kin_sales/views/sale_view.xml
+++ b/odoo-custom-addons/kin_sales/views/sale_view.xml
@@ -108,7 +108,7 @@
                     <field name="qty_delivered"/>
                     <field name="qty_invoiced"/>
                     <field name="qty_to_invoice"/>
-                    <field name="product_uom" string="Unit of Measure" groups="product.group_uom"/>
+                    <field name="product_uom" string="Unit of Measure" />
                     <field name="price_subtotal" sum="Total" widget="monetary"/>
                     <field name="name"/>
                 </tree>
