--- a/odoo-custom-addons/nexium/report/report_release_order.xml
+++ b/odoo-custom-addons/nexium/report/report_release_order.xml
@@ -211,8 +211,8 @@
                        </div>     
 					   <div class="col-6 mt32 text-center" >
 					   		 __________________________________________<br />
-									<strong>Ishmeal Sheriff</strong><br />
-						   Operations Manager
+									<strong>  </strong>
+						   Operations Department
 					   </div>               
                 </div>
 <br />
