--- a/odoo-custom-addons/fibernet/views/sale_view.xml
+++ b/odoo-custom-addons/fibernet/views/sale_view.xml
@@ -646,6 +646,21 @@
         </field>
 </record>
 
+        <record model="ir.ui.view" id="view_company_fibernet">
+                    <field name="name">res.company.form.fibernet</field>
+                    <field name="inherit_id" ref="base.view_company_form"/>
+                    <field name="model">res.company</field>
+                    <field name="arch" type="xml">
+                        <notebook position="inside">
+                            <page string="Fibernet Config">
+                                <group>
+                                    <field name="img_signature" />
+                                </group>
+                            </page>
+                        </notebook>
+                    </field>
+        </record>
+
 
 
     </data>
