--- a/odoo-custom-addons/fibernet/views/contract.xml
+++ b/odoo-custom-addons/fibernet/views/contract.xml
@@ -68,6 +68,10 @@
                         <attribute name="invisible" >1</attribute>
                 </button>
 
+                <field name="product_id" position="attributes" >
+                        <attribute name="options" >{'no_open': True, 'no_create': True}</attribute>
+                </field>
+
 
 
         </field>
