--- a/odoo-custom-addons/heyden/views/loading.xml
+++ b/odoo-custom-addons/heyden/views/loading.xml
@@ -5,6 +5,38 @@
         <menuitem id="menu_sales_atl" name="Sales/ATL Report" parent="kin_loading.menu_dispatch_operation" sequence="1" action="action_sales_atl_wizard"  />
         <menuitem id="menu_sales_atl_report" name="Sales/ATL Report" parent="sale.menu_sale_report" sequence="2" action="action_sales_atl_wizard"  />
 
+         <record id="product_template_form_extend_loading_heyden" model="ir.ui.view">
+            <field name="name">product.template.form.extend.loading.heyden</field>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="kin_loading.product_template_form_extend_loading"/>
+            <field name="arch" type="xml">
+                <field name="white_product" position="after" >
+                    <field name="conv_rate" />
+                </field>
+            </field>
+        </record>
+
+
+        <record id="purchase_order_form_loading_heyden" model="ir.ui.view">
+            <field name="name">purchase.order.form.loading</field>
+            <field name="model">purchase.order</field>
+            <field name="inherit_id" ref="kin_loading.purchase_order_form_loading" />
+            <field name="arch" type="xml">
+
+
+
+                <field name="conv_rate" position="after" >
+                    <field name="product_qty_ltr" force_save="1" readonly="1" groups="kin_loading.group_show_purchase_menu" />
+                    <field name="unit_price_ltr"  groups="kin_loading.group_show_purchase_menu" />
+                </field>
+
+                <field name="price_unit" position="attributes" >
+                    <attribute name="attrs">{'readonly': [('parent.is_purchase', '=', True)]}</attribute>
+                </field>
+
+
+            </field>
+        </record>
 
     </data>
 </odoo>
