--- a/odoo-custom-addons/kin_loading/views/mail_template.xml
+++ b/odoo-custom-addons/kin_loading/views/mail_template.xml
@@ -31,6 +31,67 @@
 
 
 
+        <record id="email_template_atl" model="mail.template">
+            <field name="name">Depot ATL - Send by Email</field>
+              <field name="subject">${object.company_id.name} ATL (Ref ${object.name or 'n/a'})</field>
+            <field name="partner_to">${object.partner_id.id}</field>
+            <field name="model_id" ref="kin_loading.model_sale_order"/>
+            <field name="body_html" type="html">
+                <div style="margin: 0px; padding: 0px;">
+                    <p style="margin: 0px; padding: 0px; font-size: 13px;">
+
+                         <p>Hello ${object.partner_id.name},</p>
+                        <br />
+                        <p>Kindly see attached for your Authority to Load document </p>
+                        <br />
+                        <p style="border-left: 1px solid #8e0000; margin-left: 30px;">
+                          <strong>REFERENCES</strong><br />
+                            Date: <strong>${format_date(object.atl_date,'d/M/Y')}</strong><br />
+                            Serial No: <strong>${object.atl_id}</strong><br />
+                            Product: <strong>${object.atl_product_id.name}</strong> <br />
+                            Quantity: <strong>${object.atl_qty} LTRS </strong><br />
+                        </p>
+
+                         <br/>
+                        <p>If you have any question, do not hesitate to contact us.</p>
+                        <p>Thank you for choosing ${object.company_id.name or 'us'}!</p>
+                        <br/>
+                        <br/>
+
+                        <div style="width: 375px; margin: 0px; padding: 0px; background-color: #3f51b5; border-top-left-radius: 5px 5px; border-top-right-radius: 5px 5px; background-repeat: repeat no-repeat;">
+                            <h3 style="margin: 0px; padding: 2px 14px; font-size: 12px; color: #DDD;">
+                                <strong style="text-transform:uppercase;">${object.company_id.name}</strong></h3>
+                        </div>
+                        <div style="width: 347px; margin: 0px; padding: 5px 14px; line-height: 16px; background-color: #F2F2F2;">
+                            <span style="color: #222; margin-bottom: 5px; display: block; ">
+                                ${object.company_id.partner_id.sudo().with_context(show_address=True, html_format=True).name_get()[0][1] | safe}
+                            </span>
+                            % if object.company_id.phone:
+                                <div style="margin-top: 0px; margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding-top: 0px; padding-right: 0px; padding-bottom: 0px; padding-left: 0px; ">
+                                    Phone: ${object.company_id.phone}
+                                </div>
+                            % endif
+                            % if object.company_id.website:
+                                <div>
+                                    Web :<a href="${object.company_id.website}">${object.company_id.website}</a>
+                                </div>
+                            %endif
+                            <p></p>
+                        </div>
+
+                    </p>
+                </div>
+           </field>
+            <field name="report_template" ref="action_report_atl"/>
+
+            <field name="report_name">ATL_${(object.name or '').replace('/','_')}_${object.state == 'atl_approved' and 'Approved' or ''}</field>
+            <field name="lang">${object.partner_id.lang}</field>
+             <field name="auto_delete" eval="True"/>
+        </record>
+
+
+
+
 
 	</data>
 </openerp>
