--- a/odoo-custom-addons/heyden/views/loading.xml
+++ b/odoo-custom-addons/heyden/views/loading.xml
@@ -48,5 +48,21 @@
             </field>
         </record>
 
+
+         <record id="purchase_request_form_extend_heyden" model="ir.ui.view">
+            <field name="name">purchase.request.form.extend</field>
+            <field name="model">purchase.request</field>
+            <field name="inherit_id" ref="purchase_request.view_purchase_request_form" />
+            <field name="arch" type="xml">
+                <field name="assigned_to" position="attributes" >
+                     <attribute name="required">1</attribute>
+
+                </field>
+                <field name="requested_by" position="after" >
+                    <field name="department_id" options="{'no_create': True, 'no_open': True}" required="1" attrs="{'readonly': [('state', '!=', 'draft')]}" />
+                </field>
+            </field>
+         </record>
+
     </data>
 </odoo>
