--- a/odoo-custom-addons/kin_purchase_request/views/purchase_request_view.xml
+++ b/odoo-custom-addons/kin_purchase_request/views/purchase_request_view.xml
@@ -8,6 +8,10 @@
             <field name="inherit_id" ref="purchase_request.view_purchase_request_form" />
             <field name="arch" type="xml">
 
+                <field name="name" position="attributes">
+                    <attribute name="readonly" >1</attribute>
+                </field>
+
                 <field name="assigned_to" position="attributes" >
                      <attribute name="options">{'no_create': True, 'no_open': True}</attribute>
                 </field>
