--- a/odoo-custom-addons/heyden/views/loading.xml
+++ b/odoo-custom-addons/heyden/views/loading.xml
@@ -94,5 +94,18 @@
 
 
 
+        <record id="view_move_form_extend_heyden" model="ir.ui.view" >
+            <field name="name" >account.move.form.extend.heyden</field>
+            <field name="model">account.move</field>
+            <field name="inherit_id" ref="account.view_move_form" />
+            <field name="arch" type="xml">
+                <field name="invoice_date" position="attributes" >
+                     <attribute name="required" >True</attribute>
+                </field>
+            </field>
+        </record>
+
+
+
     </data>
 </odoo>
